@@ -8,6 +8,8 @@ Menu_MiniPanels 7.x-1.x-dev, xxxx-xx-xx
   settings.
 #1148956 by DamienMcKenna: Due to problems with qTip, both 'adjust' values must
   be non-zero in order for them to work.
+#1798938 by DamienMcKenna: Separated the bundled qTip JS callback code so it
+  may be overridden & customized.
 
 
 Menu_MiniPanels 7.x-1.0-rc9, 2012-11-13
